--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,11 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "silverstripe/admin": "^1.6",
-        "silverstripe/framework": "^4.10",
-        "silverstripe/versioned": "^1.6",
-        "silverstripe/graphql": "^4",
-        "silverstripe/vendor-plugin": "^1",
+        "php": "^8.1",
+        "silverstripe/framework": "^4",
+        "silverstripe/versioned": "^2ß",
+        "silverstripe/vendor-plugin": "^2",
         "league/commonmark": "^2.0.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3",
-        "silverstripe/cms": "^4.6"
     },
     "scripts": {
         "lint": "phpcs src/ tests/",
