--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^8.1",
         "silverstripe/framework": "^4",
-        "silverstripe/versioned": "^2ß",
+        "silverstripe/versioned": "^2",
         "silverstripe/vendor-plugin": "^2",
         "league/commonmark": "^2.0.2"
     },
